Fix contrast on text

--- a/assets/style.css
+++ b/assets/style.css
@@ -149,7 +149,7 @@ img {
 }
 .nav-pills .nav-link.active, .nav-link.active-tag, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #9e8e00;
+	background-color: #504800;
 	border-radius: 0;
 }
 .nav-link{
